--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,15 @@
-<!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
+
+{{#each blogPosts}}
+<div class="row mb-4 post">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <a href="/post/{{id}}">{{title}}</a>
     </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    <p class="metadata">Published on {{format_date published_date}} by {{author}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{project.description}}
+      {{excerpt}}
     </p>
   </div>
 </div>
