--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,125 @@
 header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+  /* border-bottom: 1px solid #ccc; */
+  box-shadow: 15px 15px 30px var(--smokey),
+  -15px -15px 30px #ffffff;
 }
 
-.no-button {
+/* login page */
+
+body {
+  background: #000046;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  /* background: #134E5E;  
+background: -webkit-linear-gradient(to right, #71B280, #134E5E);  
+background: linear-gradient(to right, #71B280, #134E5E);  */
+}
+
+header.header {
+    z-index: 999;
+    top: -10px;
+    box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5); 
+    padding-top: 15px;
+    background-color: #000000;
+}
+
+nav.nav {
+ display: none;
+}
+
+a.title {
+  /* color: #a8ffb9; */
+  /* color: #091518; */
+  text-decoration: none;
+}
+
+div.container{
+  margin-top: 100px;
+}
+
+div.col-md-6 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 0.4em;
+  background-color: #171717;
+  border-radius: 20px;
+}
+
+div.col-md-6{
+  transform: scale(0.98);
+  border-radius: 20px;
+  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+}
+
+h2 {
+  text-align: center;
+  margin: 2em;
+  color: #7AD7F0;
+  font-size: 1.2em;
+}
+
+label {
+  text-align: center;
+  margin: 2em;
+  color: #7AD7F0;
+  font-size: 1.2em;
+}
+
+form .form-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  border-radius: 25px;
+  padding: 0.6em;
+  /* border: none; */
+  outline: inset;
+  color: #7AD7F0;
+  background-color: #171717;
+  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+}
+
+.btn.btn-primary {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 2.5em;
+  padding: 0.5em;
+  padding-left: 1.1em;
+  padding-right: 1.1em;
+  border-radius: 5px;
+  margin-right: 0.5em;
+  border: none;
+  outline: none;
+  transition: .4s ease-in-out;
+  background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+  color: rgb(0, 0, 0);
+}
+
+.btn.btn-primary:hover {
+  background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
+  color: rgb(0, 255, 200);
+}
+
+
+
+
+
+
+
+
+footer.footer{
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+  height: 100vh;
+}
+
+/* .no-button {
   background: none;
   border: none;
   padding: 0;
@@ -15,12 +132,6 @@ header, .project:not(:last-child) {
 .no-button:hover {
   color: #065b83;
   text-decoration: underline;
-}
+} */
 
 
-
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
-}
