--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
   <header class="header">
     <h1 class="logo">
       <span role="img" aria-label="music">🎵</span>
-      <a href="/">TempoTales</a>
+      <a href="/" class="title">TempoTales</a>
     </h1>
     <nav class="nav">
       <!-- Conditionally render login or logout links -->
