--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,13 +105,6 @@ form .form-input {
   color: rgb(0, 255, 200);
 }
 
-
-
-
-
-
-
-
 footer.footer{
   display: flex;
   justify-content: center;
@@ -119,19 +112,238 @@ footer.footer{
   height: 100vh;
 }
 
-/* .no-button {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  color: #1b89bc;
-  text-decoration: none;
-  font-size: 100%;
+/* profile page */
+
+div.row.mt-4 {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 10px;
+  width: 50rem;
+  background-color: white;
+  padding: 20px;
+  /* border: 4px solid #1d1b1b; */
+  border-radius: 10px;
+  /* background: linear-gradient(to right ,#4b53ed,rgb(75, 142, 250)); */
+  background-image: url(./Screenshot\ 2023-07-15\ at\ 17.48.46.png);
+  box-shadow: 0 30px 30px -30px rgba(27, 26, 26, 0.315);
 }
 
-.no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
-} */
+h3.new.post {
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: -1px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  margin-right: -100px;
+  margin-left: 60px;
+}
 
+label.post-header {
+  margin-right: 190px;
+  color: rgb(0, 0, 0);
+}
+
+label.content {
+  margin-right: 190px;
+  color:rgb(0, 0, 0);
+}
+
+input#post-title.input-form {
+  outline: 0;
+  border: 1px solid rgb(114 113 113);
+  /* border: 1px solid rgb(219, 213, 213); */
+  padding: 8px 14px;
+  border-radius: 8px;
+  width: 45rem;
+  height: 50px;
+  /* background: linear-gradient(to right ,#4b53ed,rgb(75, 142, 250)); */
+  background-color: #f9f6f6b5;
+  box-shadow: 2px 2px 12px inset rgba(0, 0, 0, 0.268);
+}
+
+
+textarea#post-content.input-form {
+  border-radius: 8px;
+  height: 160px;
+  width: 45rem;
+  resize: none;
+  outline: 0;
+  padding: 8px 14px;
+  /* background: linear-gradient(to right ,#4b53ed,rgb(75, 142, 250)); */
+  background-color: #f9f6f6b5;
+  box-shadow: 2px 2px 12px inset hsla(0, 0%, 0%, 0.268);
+  /* border: 1px solid rgb(219, 213, 213); */
+}
+
+button.btn-primary {
+  align-self: flex-end;
+  padding: 8px;
+  outline: 0;
+  border: 0;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: rgb(76, 179, 223);
+  color: #000000;
+  cursor: pointer;
+  margin-right: 185px;
+}
+
+/* profile post list */
+
+
+h2.welcome {
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+  margin-top: -25px;
+}
+
+div.post-list {
+  background-color: rgb(0, 0, 0);
+  padding: 2em;
+  padding-right: 25px;
+  padding-left: 23px;
+  padding-bottom: 1.1em;
+  border-radius: 15px;
+  margin: 1em;
+  position: absolute;
+  margin-left: 52rem;
+  margin-top: -1.3rem;
+}
+
+h3.recent {
+  color: rgb(255, 255, 255);
+  margin-bottom: 30px;
+}
+
+
+.post-list a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+.post-list a:hover {
+  color: #197eea;
+}
+
+.audio-player {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 80px;
+  background-color: #282828;
+  border-radius: 8px;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.album-cover {
+  width: 64px;
+  height: 64px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-right: 12px;
+  /* ADD logo to cover once made */
+}
+
+.player-controls {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-info {
+  margin-bottom: 4px;
+  transform: translateY(-0.2em);
+  transition: transform 0.1s ease
+}
+
+.blog-info:hover {
+  transform: translateY(-0.33em);
+}
+
+div.blog-title {
+  font-size: 16px;
+  color: #fff;
+  margin: 0;
+}
+
+
+.artist {
+  font-size: 12px;
+  color: #b3b3b3;
+  margin: 0;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 4px;
+  background-color: #4f4f4f;
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+.progress {
+  width: 50%;
+  height: 100%;
+  background-color: #1db954;
+  transform-origin: left;
+  animation: progress-animation 10s linear infinite;
+}
+
+button.btn.btn-sm.btn-danger:hover {
+  background: #ff3636;
+  transform: translateY(-0.20em);
+}
+
+/* play/pause buttons */
+
+.buttons {
+  display: flex;
+}
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.play-btn,
+.pause-btn {
+  font-size: 16px;
+  color: #fff;
+  transition: transform 0.2s ease-in-out;
+}
+
+.play-btn:hover,
+.pause-btn:hover {
+  transform: scale(1.2);
+}
+
+
+h2.welcome{
+  animation: color-change 1s 1s ;
+}
+
+@keyframes color-change {
+  0% { color: rgb(22, 59, 225); }
+  50% { color: rgb(103, 140, 199); }
+  100% { color: rgb(80, 88, 94); }
+}
+
+@keyframes progress-animation {
+  0% {
+    transform: scaleX(0);
+  }
+
+  100% {
+    transform: scaleX(1);
+  }
+}
 
