--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,44 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TempoTales</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>TempoTales</title>
+    <link rel='stylesheet' href='/css/jass.css' />
+    <link rel='stylesheet' href='/css/style.css' />
+  </head>
 
-<body>
-  <header class="header">
-    <h1 class="logo">
-      <span role="img" aria-label="music">🎵</span>
-      <a href="/" class="title">TempoTales</a>
-    </h1>
-    <nav class="nav">
-      <!-- Conditionally render login or logout links -->
-      {{#if logged_in}}
-        <a href="/profile">Profile</a>
-        <button class="btn btn-logout" id="logout">Logout</button>
-      {{else}}
-        <a href="/login">Login</a>
-      {{/if}}
-    </nav>
-  </header>
-  <main class="main">
-    <div class="container">
-      <!-- Render the sub layout -->
-      {{{ body }}}
-    </div>
-  </main>
-  <footer class="footer">
-    <p>&copy; 2023 TempoTales. All rights reserved.</p>
-  </footer>
+  <body>
+    <header class='header'>
+      <h1 class='logo'>
+        <span role='img' aria-label='music'>🎵</span>
+        <a href='/' class='title'>TempoTales</a>
+      </h1>
+      <nav class='nav'>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+          <a href='/profile'>Profile</a>
+          <button class='btn btn-logout' id='logoutButton'>Logout</button>
+        {{else}}
+          <a href='/login'>Login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class='main'>
+      <div class='container'>
+        <!-- Render the sub layout -->
+        {{{body}}}
+      </div>
+    </main>
+    <footer class='footer'>
+      <p>&copy; 2023 TempoTales. All rights reserved.</p>
+    </footer>
 
-  <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-    <script src="/js/logout.js"></script>
-  {{/if}}
-</body>
+    <!-- Render script for logged in users only -->
+    {{#if logged_in}}
+      <script src='/js/logout.js'></script>
+    {{/if}}
+  </body>
 
 </html>
