--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,12 +17,12 @@
     </h1>
     <nav class="nav">
       <!-- Conditionally render login or logout links -->
-      {{#if logged_in}}
+      {{!-- {{#if logged_in}}
         <a href="/profile">Profile</a>
         <button class="btn btn-logout" id="logout">Logout</button>
       {{else}}
         <a href="/login">Login</a>
-      {{/if}}
+      {{/if}} --}}
     </nav>
   </header>
   <main class="main">
@@ -34,11 +34,6 @@
   <footer class="footer">
     <p>&copy; 2023 TempoTales. All rights reserved.</p>
   </footer>
-
-  <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-    <script src="/js/logout.js"></script>
-  {{/if}}
 </body>
 
 </html>
