--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,6 @@
+
+  <link rel="stylesheet" href="/css/2style.css">
+
 <div class="row">
   <div class="col-auto">
     <h2 class="welcome">Welcome, {{name}}!</h2>
