--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,5 @@
 
-  <link rel="stylesheet" href="/css/2style.css">
+  {{!-- <link rel="stylesheet" href="/css/2style.css"> --}}
 
 <div class="row">
   <div class="col-auto">
