--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <div id="carouselNew" class="carousel slide" data-ride="carousel" data-interval="3000">
   <div class="carousel-inner">
     {{#each Posts as |post index|}}
-    <div class="carousel-item{{#if index}} active{{/if}}">
+    <div class="carousel-item{{#unless index}} active{{/unless}}">
       <div class="row mb-4 post">
         <div class="col-md-12">
           <div class="post-card">
@@ -20,11 +20,11 @@
     {{/each}}
   </div>
 
-  <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselNew" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselNew" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
@@ -32,5 +32,4 @@
 <button id="logout">Logout here!</button>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
