--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,19 +15,15 @@
       <span role="img" aria-label="music">🎵</span>
       <a href="/" class="title">TempoTales</a>
     </h1>
-    <nav class="nav">
-      <!-- Conditionally render login or logout links -->
-      {{!-- {{#if logged_in}}
-        <a href="/profile">Profile</a>
-        <button class="btn btn-logout" id="logout">Logout</button>
-      {{else}}
-        <a href="/login">Login</a>
-      {{/if}} --}}
-    </nav>
+    {{#if logged_in}}
+      <a href="/profile">Profile</a>
+      <button class="btn btn-logout" id="logout">Logout</button>
+  {{else}}
+      <a href="/login">Login</a>
+  {{/if}}
   </header>
   <main class="main">
     <div class="container">
-      <!-- Render the sub layout -->
       {{{ body }}}
     </div>
   </main>
@@ -35,5 +31,5 @@
     <p>&copy; 2023 TempoTales. All rights reserved.</p>
   </footer>
 </body>
-
+<script src='./js/logout.js'></script>
 </html>
