--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,4 @@
+<body class="bg">
 <div class="row">
   <div class="col-auto">
     <h2 class="welcome">Welcome, {{name}}!</h2>
@@ -72,4 +73,5 @@
     {{/if}}
   </div>
 </div>
+</body>
 <script src="./js/profile.js"></script>
