--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,10 +133,17 @@ form .form-input {
 }
 
 footer.footer{
-  display: flex;
+ 
+  color: white;
   justify-content: center;
-  padding: 2rem;
-  height: 100vh;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the height of your footer */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
 }
 
 /* profile page */
