--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,19 @@
-
 {{#each Posts as |post|}}
-<div class="row mb-4 post">
-  <div class="col-md-5">
-    <h2>
-      <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p class="metadata">Published on {{format_date post.date_created}} by {{user.name}}</p>
+  <div class='row mb-4 post'>
+    <div class='col-md-5'>
+      <h2>
+        <a href='/post/{{post.id}}'>{{post.title}}</a>
+      </h2>
+      <p class='metadata'>Published on
+        {{format_date post.date_created}}
+        by
+        {{user.name}}</p>
+    </div>
+    <div class='col-md-7'>
+      <p>
+        {{excerpt}}
+      </p>
+    </div>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{excerpt}}
-    </p>
-  </div>
-</div>
 {{/each}}
-<button id="logout">Logout here!</button>
-<script src='./js/logout.js'></script>
+<button id='logout'>Logout here!</button>
