--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,14 +16,13 @@
       <a href="/" class="title">TempoTales</a>
     </h1>
     <nav class="nav">
-      <!-- Conditionally render login or logout links -->
-      {{!-- {{#if logged_in}}
-        <a href="/profile">Profile</a>
-        <button class="btn btn-logout" id="logout">Logout</button>
-      {{else}}
-        <a href="/login">Login</a>
-      {{/if}} --}}
-    </nav>
+    <ul>
+      <li class="li-inline nav-item"><a href="/">Home</a></li>
+      <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+      <li class="li-inline nav-item"><a href="/login">Login</a></li>
+      <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+    </ul>
+  </nav>
   </header>
   <main class="main">
     <div class="container">
