--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,35 +1,53 @@
-<div id="carouselNew" class="carousel slide" data-ride="carousel" data-interval="3000">
-  <div class="carousel-inner">
-    {{#each Posts as |post index|}}
-    <div class="carousel-item{{#unless index}} active{{/unless}}">
-      <div class="row mb-4 post">
-        <div class="col-md-12">
-          <div class="post-card">
-            <div class="post-image">
-              <img src="{{post.image_url}}" alt="{{post.title}}">
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Music Updates</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+</head>
+<body>
+    <!-- Your existing carousel code -->
+    <div id="carouselNew" class="carousel slide" data-ride="carousel" data-interval="3000">
+        <div class="carousel-inner">
+            {{#each Posts as |post index|}}
+            <div class="carousel-item{{#unless index}} active{{/unless}}">
+                <div class="row mb-4 post">
+                    <div class="col-md-12">
+                        <div class="post-card">
+                            <div class="post-image">
+                                <img src="{{post.image_url}}" alt="{{post.title}}">
+                            </div>
+                            <div class="post-content">
+                                <h2><a href="/post/{{post.id}}" class="post-title">{{post.title}}</a></h2>
+                                <p class="metadata">Published on {{format_date post.date_created}} by {{user.name}}</p>
+                                <p class="post-excerpt">{{post.excerpt}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="post-content">
-              <h2><a href="/post/{{post.id}}" class="post-title">{{post.title}}</a></h2>
-              <p class="metadata">Published on {{format_date post.date_created}} by {{user.name}}</p>
-              <p class="post-excerpt">{{post.excerpt}}</p>
-            </div>
-          </div>
+            {{/each}}
         </div>
-      </div>
-    </div>
-    {{/each}}
-  </div>
 
-  <a class="carousel-control-prev" href="#carouselNew" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselNew" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<button id="logout">Logout here!</button>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <a class="carousel-control-prev" href="#carouselNew" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselNew" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <!-- Music Updates -->
+    <h1>Latest Music Updates</h1>
+    <div id="music-updates"></div>
+    <div id ="music-updates"></div>
+
+    <button id="logout">Logout here!</button>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+   <script src="/controllers/music.js"></script>
+    
+</body>
+</html>
