fixed error message with sql

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -138,5 +138,6 @@
   {{/if}}
 </div>
 
+{{! double checked paths }}
 <script src='../public/js/profile.js'></script>
 <script src='../public/js/editcomment.js'></script>
