--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -41,13 +41,19 @@
     <!-- Music Updates -->
     <h1>Top 5 Music Tracks</h1>
     <div id="top-tracks"></div>
+  <aside>
+  <h2>LTop 5 Music Tracks</h2>
+  <div id="live-tracks"></div>
+</aside>
 
-    <button id="logout">Logout here!</button>
+<div id="articleContainer"></div>
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-   <script src="/controllers/music.js"></script>
+
     
      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
