--- a/public/css/style.css
+++ b/public/css/style.css
@@ -529,7 +529,55 @@ h2.welcome{
 }
 
 
+/* Style for the live API tracks */
+aside {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+}
 
+h2 {
+  margin-bottom: 10px;
+  color: #333;
+  font-size: 24px;
+}
 
+#live-tracks {
+  display: flex;
+  flex-direction: column;
+}
 
+.track {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
 
+.track .rank {
+  width: 30px;
+  height: 30px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.track .info {
+  display: flex;
+  flex-direction: column;
+}
+
+.track .info h3 {
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.track .info p {
+  margin: 0;
+  color: #666;
+}
