--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,16 +3,5 @@
   <p>{{body}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
 
-  <div class="row mt-4">
-  <div class="col-md-7">
-    <form class="new-post-form" id="comment-post-form">
-      <div class="form-groups">
-      <textarea class="input-form" id="comment-content" name="comment-content" placeholder="Add a comment"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn-primary">Post comment!</button>
-      </div>
-    </form>
-  </div>
-</div>
+  {{!-- {{if user.name = }} --}}
 
