--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,5 +3,8 @@
   <p>{{body}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
 
-  {{!-- {{if user.name = }} --}}
+  {{#if (isUserBlog user_id logged_in_user_id)}}
+    <a href="/post/edit/{{id}}">Edit</a>
+    <a href="/post/delete/{{id}}">Delete</a>
+  {{/if}}
 
