--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,9 +13,9 @@
                 <div class="row mb-4 post">
                     <div class="col-md-12">
                         <div class="post-card">
-                            {{!-- <div class="post-image">
+                            <div class="post-image">
                                 <img src="{{post.image_url}}" alt="{{post.title}}">
-                            </div> --}}
+                            </div>
                             <div class="post-content">
                                 <h2><a href="/post/{{post.id}}" class="post-title">{{post.title}}</a></h2>
                                 <p class="metadata">Published on {{format_date post.date_created}} by {{user.name}}</p>
