--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  /* background-image: url('./SL.123119.26540.04.jpg'); */
+  background-image: url('./SL.123119.26540.04.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
