--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -48,6 +48,13 @@
 <h1>Listen to songs right now</h1>
 <div id="playlist-container" style="min-height: 360px;"></div>
 
+<div id="music-articles">
+    <h1>Music Articles</h1>
+    <div id="article-container" class="article-container"></div>
+</div>
+<div id="hip-hop-articles"></div>
+
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="/js/homepage.js"></script>
