--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
   </nav>
 
     {{#if logged_in}}
-      <a href="/profile">Profile</a>
+      <a href="/profile" class="profile">Profile</a>
       <button class="btn btn-logout" id="logout">Logout</button>
   {{else}}
       <a href="/login">Login</a>
