--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,18 +1,21 @@
+<body class="post">
 <div class="text-center">
-  <h2>{{title}}</h2>
-  <p>{{body}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-
-  <div class="row mt-4">
+  <h2 class="hpost">{{title}}</h2>
+  <p class="text">{{body}}</p>
+  <p class="created">Created by {{user.name}} on {{format_date date_created}}</p>
+  <hr>
+  <div class="row mt-5">
   <div class="col-md-7">
     <form class="new-post-form" id="comment-post-form">
       <div class="form-groups">
-      <textarea class="input-form" id="comment-content" name="comment-content" placeholder="Add a comment"></textarea>
+      <textarea class="comment-form" id="comment-content" name="comment-content" placeholder="Add a comment"></textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn-primary">Post comment!</button>
+        <button type="submit" class="post-btn">Post comment!</button>
       </div>
     </form>
   </div>
-</div>
+  </div>
+  </body>
+
 
