--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -37,7 +37,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-
+<div id="youtube-player-container"></div>
 <!-- Music Updates -->
 <h1>Top 5 Music Tracks</h1>
 <div id="top-tracks"></div>
@@ -53,6 +53,11 @@
     <div id="article-container" class="article-container"></div>
 </div>
 <div id="hip-hop-articles"></div>
+
+<!-- Add this div where you want the YouTube video to appear -->
+<div id="youtube-player-container"></div>
+
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
