added more stuff

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -37,6 +37,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+<!-- Add this div where you want the YouTube video to appear -->
 <div id="youtube-player-container"></div>
 <!-- Music Updates -->
 <h1>Top 5 Music Tracks</h1>
@@ -54,8 +55,16 @@
 </div>
 <div id="hip-hop-articles"></div>
 
-<!-- Add this div where you want the YouTube video to appear -->
-<div id="youtube-player-container"></div>
+<div id="chatbot-container">
+    <div id="chatbot-messages">
+      <!-- Messages from the chatbot will be appended here -->
+      <div class="message bot">Hello! How can I assist you?</div>
+      <div class="message user">Do You Have a question. ? </div>
+      <!-- Add more messages here -->
+    </div>
+    <input type="text" id="user-input" placeholder="Type your message..." />
+  </div>
+
 
 
 
