--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,7 +148,7 @@ form .form-input {
 }
 
 
-=======
+
 /* 
 footer.footer{
  
@@ -158,11 +158,11 @@ footer.footer{
   bottom: 0;
   width: 100%;
   height: 60px; /* Set the height of your footer */
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
  
-/* } */ */
+}  */
 
 
 /* profile page */
@@ -808,12 +808,12 @@ aside {
   color: black;
 }
 
-h2 {
+/* h2 {
   margin-bottom: 10px;
   color: #f30a39;
   font-size: 24px;
   background-color: rgb(241, 240, 239);
-}
+} */
 
 #live-tracks {
   display: flex;
@@ -879,7 +879,7 @@ h2 {
 
 
 
-=======
+
 /* Add this CSS to your existing styles */
 /*daley */
 
@@ -918,7 +918,7 @@ footer.footer{
   justify-content: center;
  
 }
-=======
+
 /* .footer {
   background-color: #f0f0f0;
   padding: 10px;
