--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,25 +6,16 @@
 header,
 .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
-  /* box-shadow: 15px 15px 30px var(--smokey),
-  -15px -15px 30px #ffffff; */
 }
 
 
 
 
-  h1 {
-    /* font-size: 50px;
-    color: #fff;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: -10px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); */
-  }
   h1.logo {
     font-size: 50px;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: -4px;
   }
 
   
@@ -39,12 +30,15 @@ header,
   }
   
 
-body {
+body.hp {
   
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url('./pawel-czerwinski-vI5XwPbGvmY-unsplash.jpg');
+  /* background-image: url('./pawel-czerwinski-vI5XwPbGvmY-unsplash.jpg'); */
+  background: #000046; 
+    background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  
+    background: linear-gradient(to right, #1CB5E0, #000046); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -72,8 +66,6 @@ nav.nav {
 }
 
 a.title {
-  /* color: #a8ffb9; */
-  /* color: #091518; */
   text-decoration: none;
 }
 
@@ -150,32 +142,11 @@ form .form-input {
 
 
 
-/* 
-footer.footer{
- 
-  color:white;
-  justify-content: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-
-  height: 60px; 
-  display: flex;
-
-  height: 60px; /* Set the height of your footer */
-  /* display: flex;
-
-  align-items: center;
-  justify-content: center;
- 
-}  */
-
-
 /* profile page */
 
 a.profile {
   background-color: dimgray;
-    padding: 9px 20px;
+    padding: 5px 16px;
     border-radius: 5px;
     color: #000000;
     margin-bottom: -36px;
@@ -509,7 +480,7 @@ h2.welcome{
   box-shadow: 0 0px 4px rgba(48, 48, 48, 0.685);
   /* color: #fff; */
   color: #FF342B;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -606,6 +577,14 @@ div.post-card a.cover {
   animation: color 1s 1s;
 }
 
+div.article {
+  margin-top: 31px;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 5px;
+}
+
 @keyframes color {
   0% { color: rgb(22, 59, 225); }
   50% { color: rgb(103, 140, 199); }
@@ -621,8 +600,6 @@ div.post-card:hover a.cover {
   background: #2c3e50; 
 background: -webkit-linear-gradient(to right, #3498db, #2c3e50);  
 background: linear-gradient(to right, #3498db, #2c3e50); 
-
-
 }
 
 /* div.post-card:hover {
@@ -634,7 +611,8 @@ div.post-card > .post-content {
   display: block;
   font-size: 1.4rem;
   letter-spacing: -.0.35rem;
-  margin: 97px;
+  /* margin: 13px;
+  margin-right: 25px; */
 }
 
 .carousel-item .post-image img {
@@ -655,13 +633,11 @@ div.post-card > .post-content {
 
 a.carousel-control-prev {
   width:139px;
-  height:487px;
   background: none;
 }
 
 a.carousel-control-next {
   width:139px;
-  height:487px;
   background: none;
 }
 
@@ -680,7 +656,6 @@ span.carousel-control-next-icon {
 
 a.carousel-control-prev:hover,
 a.carousel-control-next:hover {
-  /* background-color: rgba(234, 4, 4, 0.8); */
   transform: translateY(-0.20em);
 
 }
@@ -699,6 +674,8 @@ div.text-center {
   background-color: white;
   box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
   border-radius: 17px 17px 27px 27px;
+  word-break: break-word;
+  background: #e0e0e0;
 }
 
 h2.hpost {
@@ -727,7 +704,6 @@ h2.hpost::after {
 div.row.mt-5 {
   width: 147%;
   height: fit-content;
-  /* background-color: #f1f1f1; */
   padding: 8px;
 }
 
@@ -761,17 +737,15 @@ button.post-btn:hover {
 }
 
 div.row.mt-5 textarea {
-  /* width: 100%;
-  height: 40px; */
   resize: none;
   border: 0;
-  border-radius: 6px;
+  border-radius: 2px;
   padding: 12px 12px 10px 12px;
-  /* font-size: 13px; */
   outline:none;
-  width: 62rem;
+  width: 63.3rem;
+  margin-left: -0.6rem;
   height: 12rem;
-  background: #e7e7e7;
+  background: #f3f3f3;
 }
 
 
@@ -800,11 +774,59 @@ p.created {
 }
 
 
+
 /* Common style for both containers */
-/* Common style for both containers */
+
+h1.top5 {
+  border: #000046;
+  color: white;
+}
+
+h2.article-title {
+  text-align: center;
+  margin: 2em;
+  color: white;
+    letter-spacing: 2px;
+    font-size: 22px;
+    margin-bottom: 25px;
+    text-transform: capitalize;
+}
+
+hr.hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0,0,0,.1);
+  width: 28rem;
+}
+
+textarea.article-content {
+ border-radius: 10px;
+ transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+padding:10px;
+width: 35rem;
+height: 24rem;
+resize: none;
+background: linear-gradient(0deg, #000, #272727);
+    color: #508dd9;
+    box-shadow: #111 0 1px 3px 2px;
+    border: none;
+}
+
+hr.line {
+  border-width: 5px;
+  background: rgb(0, 0, 0);
+
+}
+
+br {
+  /* display: none; */
+  width: 200px;
+}
+
 h1 {
   font-size: 28px;
-  color: #1d1b1b;
+  color: #ffffff;
   text-align: center;
   margin-top: 30px;
   margin-bottom: 20px;
@@ -948,6 +970,7 @@ h1 {
   padding: 20px;
   max-width: 400px;
   margin: 0 auto;
+  margin-top: 31px;
   position: relative;
   font-family: Arial, sans-serif;
 }
@@ -1027,7 +1050,7 @@ h1 {
 
 .left-column h1 {
   font-size: 28px;
-  color: #1d1b1b;
+  color: #ffffff;
   text-align: left;
   margin-top: 0;
   margin-bottom: 20px;
@@ -1048,7 +1071,7 @@ h1 {
 
 .right-column h1 {
   font-size: 28px;
-  color: #1d1b1b;
+  color: #ffffff;
   text-align: left;
   margin-top: 0;
   margin-bottom: 20px;
