--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,8 +17,8 @@
 
                             <div class="post-content">
                                 <h2><a href="/post/{{post.id}}" class="post-title">{{post.title}}</a></h2>
+                                 <p class="post.body" id="postbody">{{post.body}}</p>
                                 <p class="metadata">Published on {{format_date post.date_created}} by {{user.name}}</p>
-                                <p class="post.body">{{post.body}}</p>
                                 <span><a href="/post/{{post.id}}" class="cover">Click me to see post</a></span>
                             </div>
                         </div>
