--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Music Updates</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
