--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,13 @@
   <title>TempoTells</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
+  <!-- Add your responsive CSS styles here -->
+  <style>
+    /* Example media query for small screens */
+    @media (max-width: 767px) {
+      /* Add CSS adjustments for small screens here */
+    }
+  </style>
 </head>
 
 <body>
@@ -16,21 +23,22 @@
       <a href="/" class="title">TempoTells</a>
     </h1>
 
+    <!-- Mobile-friendly navigation (consider using a hamburger menu) -->
     <nav class="nav">
-    <ul>
-      <li class="li-inline nav-item"><a href="/">Home</a></li>
-      <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-      <li class="li-inline nav-item"><a href="/login">Login</a></li>
-      <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
-    </ul>
-  </nav>
+      <ul>
+        <li class="li-inline nav-item"><a href="/">Home</a></li>
+        <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+        <li class="li-inline nav-item"><a href="/login">Login</a></li>
+        <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+      </ul>
+    </nav>
 
     {{#if logged_in}}
-      <a href="/profile" class="profile">Profile</a>
-      <button class="btn btn-logout" id="logout">Logout</button>
-  {{else}}
-      <a href="/login">Login</a>
-  {{/if}}
+    <a href="/profile" class="profile">Profile</a>
+    <button class="btn btn-logout" id="logout">Logout</button>
+    {{else}}
+    <a href="/login">Login</a>
+    {{/if}}
 
   </header>
   <main class="main">
