added media query

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,7 +13,7 @@
             {{#each Posts as |post index|}}
             <div class="carousel-item{{#unless index}} active{{/unless}}">
                 <div class="row mb-4 post">
-                    <div class="col-md-12">
+                    <div class="col">
                         <div class="post-card">
 
                             <div class="post-content">
@@ -38,8 +38,6 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
-
 
     <!-- Add this div where you want the YouTube video to appear -->
     <div class="tracks-container">
@@ -75,6 +73,8 @@
         <div id="article-container" class="article-container"></div>
     </div>
     <div id="hip-hop-articles"></div>
+
+    
  <div id="chatbot-container">
         <div id="chatbot-messages">
             <!-- Messages from the chatbot will be appended here -->
